<resources>
    <string name="app_name">GroupUp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordConfirmation">Password Confirmation</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rationale_title">Location Permission Needed</string>
    <string name="rationale_desc">GroupUp needs your location permission to help you see what groups are in your area.</string>
</resources>