<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- Contains login and register toggle buttons -->
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/materialButtonToggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:checkedButton="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/loginButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/registerButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="100dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/loginButton"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <!-- Contains fields for login -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginFields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialButtonToggleGroup"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="start"
                android:hint="@string/email"
                android:textColorHint="#616161">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="48dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/emailInput"
            android:id="@+id/passwordInput"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"

            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="start"
                android:hint="@string/password"
                android:textColorHint="#616161"
                android:inputType="textPassword"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:elevation="10sp">
        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Contains fields for registration -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerFields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialButtonToggleGroup"
        android:visibility="gone"

    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:id="@+id/linearLayout"
            >

            <!-- First Name Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameRegister"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_weight="1"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:hint="@string/firstName"
                    android:textColorHint="#616161">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Last Name Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameRegister"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:hint="@string/lastName"
                    android:textColorHint="#616161">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>




        <!-- Email Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="48dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            android:id="@+id/emailInputRegister"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"

            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="start"
                android:hint="@string/email"
                android:textColorHint="#616161"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="48dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/emailInputRegister"
            android:id="@+id/passwordInputRegister"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:endIconMode="password_toggle"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#616161"
                >
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="48dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInputRegister"
            android:id="@+id/passwordConfirmationInput"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="start"
                android:hint="@string/passwordConfirmation"
                android:inputType="textPassword"
                android:textColorHint="#616161"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/passwordConfirmationInput"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:elevation="10sp">
        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>